syntax="proto3";

option go_package="proto/";

service CacheInteract {
  rpc MapInsert(MapInsertInput) returns (MapInsertResult);
}

message MapInsertInput {
  string key=1;
  string value=2;
}

message MapInsertResult {
  int32 result=1;
}
